--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -8,6 +8,7 @@ on:
       - "main"
 jobs:
   tests:
+    if: ${{ false }}  # disable for now
     name: ${{ matrix.session }} ${{ matrix.python }} / ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
@@ -113,7 +114,8 @@ jobs:
 
   coverage:
     runs-on: ubuntu-latest
-    needs: tests
+    # Does this really need the tests to be completed?
+    # needs: tests
     steps:
       - name: Check out the repository
         uses: actions/checkout@v3
