--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -8,7 +8,7 @@ on:
       - "main"
 jobs:
   tests:
-    if: ${{ false }}  # disable for now
+    # if: ${{ false }}  # TODO: reenable after testing the other parts
     name: ${{ matrix.session }} ${{ matrix.python }} / ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
