--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pandas = "^1.5.1"
 python-dotenv = "^0.21.0"
 pyarrow = "^10.0.0"
 sphinx-rtd-theme = "^1.1.1"
+types-requests = "^2.28.11.5"
 
 
 [tool.poetry.dev-dependencies]
