--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ python-dotenv = "^0.21.0"
 pyarrow = "^10.0.0"
 sphinx-rtd-theme = "^1.1.1"
 types-requests = "^2.28.11.5"
+types-click = "^7.1.8"
 
 
 [tool.poetry.dev-dependencies]
