--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,6 +33,7 @@ repos:
         language: system
         types: [text]
         stages: [commit, push, manual]
+        exclude: ".*gitpod.yml"
       - id: flake8
         name: flake8
         entry: flake8
