Feature/data loading (#10)
* Fix issue #7

* + #4 get device endpoint from .env if specified

* Update .env.sample

* ~ reduce cli command complexity

* ~ improve data loading routine

skipping 404 hotspots

* ~ #4 configure api endpoint

* linting

* + add logging

* + add mock tests

* ~ pre-commit fixes

* ~ fixing pipeline

* + add pytest-mock to poetry

* ~ update nox files and return types

* ~ lint tests

* ~ test fixing imports

* Update test_loading_data.py

* + implement review changes

* Update challenges.py

* Update poetry.lock

--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,5 @@ PYTHONPATH=./src
 
 # The Helium Consol API requires an api key.
 #API_KEY=
+#CONSOLE_ENDPOINT=https://console.helium.com/api/v1
+#API_ENDPOINT=https://api.helium.io/v1
