Feature/#9 prepare pypi packages (#5)
* Create python-publish.yml

* update gitignore

* Delete .vscode directory

* add testing action

* + add test workflow

* + add constraints.txt

* ~ only run actions on pr changes and main

* - remove test job so we can test the coverage

* - remove unsafe py dependency

* + fix all flake8 issues

* + fix pre-commit hook issues

* + fix all pre-commit issues

* + add pythonpath to github-ci

* + fix a lot of typing errors

* + fix and add all type definitions for mypy

* - remove python 3.7 from testing and disable safety

* + ignore missing imports on mypy

* ~ make coverage report dependent on tests

* + fix autodoc path and mypy error

* use Field instead og field

* fix field

* use pydantic instead of dataclass

* some fixes for data handling

* tests

* Revert "tests"

This reverts commit fe571eb1ff2d5743b228b2bb6ecf7747fcf5b6e8.

* Revert "some fixes for data handling"

This reverts commit 83a4579e0c3a4573b2f577b1096b4b8dd5e80e53.

* allow arbitrary types

* fix pre-commit and parameters

* add type to dataobject

* re-add DataObject and Data Handling

* typing dataobject function

* update tests and typing

* fix helpers and rm unecessary code

* rm unnecessary code

* fix some tests

* fix line break

* + fix pre-commit issues

* + remove DataObject and replace with BaseModel

* + install test dependencies in nox before pytest

* - endpoint no longer extends BaseModel

* ~ create constructor for endpoint

* + fix failing test assertion

* - remove wront test

* + fix pickling error by turning the result into a df

* + add release workflow

* fix get-device endpoint

* - remove gha pull depth

* ~ refactor Endpoint

* ~ move logging out of classes

* ~ decompose ResultHandler into functions

* - remove endpoint helpers temp file

* - remove poetry install from testing

* ~ move request and get_url out of Endpoint

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,7 @@
 # Pythonpath so that module imports from helium_api_wrapper work
 PYTHONPATH=./src
 
-# The Helium Consol API requires an api key. 
+# The Helium Consol API requires an api key.
 #API_KEY=
+#CONSOLE_ENDPOINT=https://console.helium.com/api/v1
+#API_ENDPOINT=https://api.helium.io/v1
