--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,15 +5,15 @@ description = "Helium Api Wrapper"
 authors = ["Lukas Huber <lukas.huber@fh-kufstein.ac.at>"]
 license = "MIT"
 readme = "README.md"
-homepage = "https://github.com/g4challenge/helium-api-wrapper"
-repository = "https://github.com/g4challenge/helium-api-wrapper"
+homepage = "https://github.com/emergotechnologies/helium-api-wrapper"
+repository = "https://github.com/emergotechnologies/helium-api-wrapper"
 documentation = "https://helium-api-wrapper.readthedocs.io"
 classifiers = [
     "Development Status :: 3 - Alpha",
 ]
 
 [tool.poetry.urls]
-Changelog = "https://github.com/g4challenge/helium-api-wrapper/releases"
+Changelog = "https://github.com/emergotechnologies/helium-api-wrapper/releases"
 
 [tool.poetry.dependencies]
 python = "^3.8"
@@ -24,6 +24,8 @@ pandas = "^1.5.1"
 python-dotenv = "^0.21.0"
 pyarrow = "^10.0.0"
 sphinx-rtd-theme = "^1.1.1"
+types-requests = "^2.28.11.5"
+types-click = "^7.1.8"
 
 
 [tool.poetry.dev-dependencies]
@@ -44,6 +46,7 @@ pep8-naming = ">=0.12.1"
 pre-commit = ">=2.16.0"
 pre-commit-hooks = ">=4.1.0"
 pytest = ">=6.2.5"
+pytest-mock = "*"
 pyupgrade = ">=2.29.1"
 safety = ">=1.10.3"
 sphinx = ">=4.3.2"
@@ -69,7 +72,7 @@ source = ["helium_api_wrapper", "tests"]
 
 [tool.coverage.report]
 show_missing = true
-fail_under = 100
+fail_under = 70
 
 [tool.isort]
 profile = "black"
