--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,72 @@
 poetry
 nox~=2022.8.7
 twine
+pandas~=1.5.1
+haversine~=2.7.0
+pydantic~=1.10.2
+click~=8.1.3
+requests~=2.28.1
+python-dotenv~=0.21.0
+pip~=22.3.1
+attrs~=22.1.0
+colorlog~=6.7.0
+toml~=0.10.2
+wheel~=0.38.4
+docutils~=0.17.1
+Sphinx~=4.3.2
+tornado~=6.2
+Jinja2~=3.1.2
+keyring~=23.11.0
+pkginfo~=1.9.2
+packaging~=21.3
+safety~=2.3.1
+dparse~=0.6.2
+certifi~=2022.9.24
+six~=1.16.0
+idna~=3.4
+urllib3~=1.26.12
+pyparsing~=3.0.9
+setuptools~=65.4.1
+zipp~=3.11.0
+py~=1.11.0
+colorama~=0.4.5
+pytest~=7.1.3
+pytest-mock~=3.10.0
+mypy~=0.982
+filelock~=3.8.0
+tomli~=2.0.1
+pytz~=2022.4
+Babel~=2.10.3
+numpy~=1.23.4
+MarkupSafe~=2.1.1
+python-dateutil~=2.8.2
+pyarrow~=10.0.0
+imagesize~=1.4.1
+snowballstemmer~=2.2.0
+Pygments~=2.13.0
+pluggy~=1.0.0
+iniconfig~=1.1.1
+pexpect~=4.8.0
+argcomplete~=2.0.0
+alabaster~=0.7.12
+gitdb~=4.0.9
+pbr~=5.10.0
+virtualenv~=20.16.2
+PyYAML~=6.0
+black~=22.8.0
+platformdirs~=2.5.2
+pathspec~=0.10.1
+smmap~=5.0.0
+isort~=5.10.1
+identify~=2.5.6
+bandit~=1.7.4
+stevedore~=3.5.0
+flake8~=5.0.4
+pyflakes~=2.5.0
+pycodestyle~=2.9.1
+darglint~=1.8.1
+pyupgrade~=3.0.0
+cfgv~=3.3.1
+distlib~=0.3.6
+pydocstyle~=6.1.1
+coverage~=6.5.0
