--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,14 +1,13 @@
 name: Release
 
 on:
-  label:
-    types:
-      - created
   pull_request:
     types: [opened, reopened, synchronize]
   push:
     branches:
       - "main"
+    tags:
+      - "*"
 
 jobs:
   release:
