--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,13 @@ jobs:
       - name: Check out the repository
         uses: actions/checkout@v3
 
+      - name: set env
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      - name: Check Release Version
+        run: |
+          echo $RELEASE_VERSION
+          echo ${{ env.RELEASE_VERSION }}
+
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
@@ -57,7 +64,7 @@ jobs:
           poetry build --ansi
 
       - name: Publish package on PyPI
-        if: steps.check-version.outputs.tag
+        if: ${{ env.RELEASE_VERSION }}
         uses: pypa/gh-action-pypi-publish@v1.5.0
         with:
           user: __token__
